<resources>
    <string name="app_name">TasXpert</string>
    <string name="logo">Logo</string>
    <string name="copyleft">Lalitesh Sahoo 2106</string>
    <string name="dev_site">www.proknowledge.co.in</string>
    <string name="dev_googleplus">lsdevloper@gmail.com</string>
    <string name="dev_github">https://github.com/</string>
    <string name="beta_link">no links</string>
    <string name="gplus_community">no gplus communities</string>
    <string name="paypal">Paypal</string>
    <string name="paypal_url">not available</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="bitcoin_url">not available</string>
    <string name="help_online_url">see tour</string>
    <string name="htmlsave"></string>
    <string name="propic"></string>
    <string name="title_item_list">Events</string>
    <string name="add_note">Add Events</string>
    <string name="title">Its Empty Here Fill In Some Memories</string>
    <string name="title_activity_list">TasXpert</string>
    <string name="search">Search</string>
    <string name="search_hint">Search in Events</string>
    <string name="content">Content</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="undo">Undo</string>
    <string name="trash">Trash</string>
    <string name="trashed">trashed</string>
    <string name="note_trashed">Event(s) trashed</string>
    <string name="note_untrashed">Event(s) restored from trash</string>
    <string name="untrash">Restore from trash</string>
    <string name="delete">Delete</string>
    <string name="note_deleted">Event(s) deleted permanently</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Restore from archive</string>
    <string name="creation">Created:</string>
    <string name="last_update">Updated:</string>
    <string name="delete_note_confirmation">Confirm Event deletion?</string>
    <string name="confirm">Confirm</string>
    <string name="ok">Ok</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="note_updated">Event updated</string>
    <string name="empty_note_not_saved">Can\'t save an empty Event</string>
    <string name="empty_note_not_shared">Can\'t share an empty Event</string>
    <string name="note_archived">Event archived</string>
    <string name="note_unarchived">Event restored from archive</string>
    <string name="note">Event</string>
    <string name="share_message_chooser">Share with</string>
    <string name="shared_content_sign">\n【by TasXpert】</string>
    <string name="sort">Sort</string>
    <string name="select_sorting_column">Sort by</string>
    <string name="tap_to_undo">Tap to undo</string>
    <string name="alarm_set_on">Reminder set for</string>
    <string name="starting_from">starting from</string>
    <string name="at_time">at</string>
    <string name="discard_changes">Discard changes</string>
    <string name="attachment">Attachment</string>
    <string name="camera">Camera</string>
    <string name="delete_selected_image">Delete selected attachment?</string>
    <string name="delete_all_attachments">Delete all the attachments?</string>
    <string name="gallery">Gallery</string>
    <string name="location">Location</string>
    <string name="pushbullet">Pushbullet</string>
    <string name="remove_location">Remove location?</string>
    <string name="remove_reminder">Remove reminder?</string>
    <string name="add_reminder">Add reminder</string>
    <string name="location_not_found">Check Internet Connection And Try Again</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="no_app_to_handle_intent">No applications to handle file</string>
    <string name="storage_not_available">Storage not available</string>
    <string name="video">Video</string>
    <string name="feature_not_available_on_this_device">Feature unavailable on this device, sorry</string>
    <string name="error_occurred_deleting_note">Error while deleting Event</string>
    <string name="no_backups_available">No backups available</string>
    <string name="data_export_message">Insert backup name</string>
    <string name="data_import_message">Click -&gt; restore\nLong-click -&gt; delete</string>
    <string name="data_import_message_warning">WARNING: This will replace all current data!</string>
    <string name="data_export_completed">Data backup completed</string>
    <string name="data_import_completed">Data restore completed</string>
    <string name="click_to_refresh_application">Click to refresh application</string>
    <string name="backup_existing">Backup already exist. It\'ll be overwritten</string>
    <string name="tag">Tag</string>
    <string name="tags">Tags</string>
    <string name="add_tag">Add tags</string>
    <string name="select_tags">Select tag(s)</string>
    <string name="categories">Categories</string>
    <string name="edit_tag">Edit category</string>
    <string name="add_category">Add category</string>
    <string name="category_title">Title</string>
    <string name="category_description">Description</string>
    <string name="category_color">Color</string>
    <string name="category_saved">Category saved</string>
    <string name="category_deleted">Category deleted</string>
    <string name="category_missing_title">Category title missing</string>
    <string name="delete_this_category">Delete this category</string>
    <string name="category">Category</string>
    <string name="categorize_as">Categorize as</string>
    <string name="title_activity_category">Edit category</string>
    <string name="delete_unused_category_confirmation">Confirm category deletion?</string>
    <string name="delete_category_confirmation">This category is used by $1$ Event/s.\nConfirm Events un-categorization and category deletion?</string>
    <string name="discard">Discard</string>
    <string name="remove_category">Remove category</string>
    <string name="no_tags_created">No tags have been created yet</string>
    <string name="no_categories_created">No categories have been created yet</string>
    <string name="notes_category_removed">Category removed from Events</string>
    <string name="notes_categorized_as">Events categorized as</string>
    <string name="insert_security_password">Insert Password</string>
    <string name="lock">Lock</string>
    <string name="save_note_to_lock_it">Save Event to lock it</string>
    <string name="save_note_to_unlock_it">Save Event to unlock it</string>
    <string name="unlock">Unlock</string>
    <string name="title_activity_password">Edit security Codes</string>
    <string name="title_activity_about">About The Application</string>
    <string name="deleted">deleted</string>
    <string name="checklist_on">Enable checklist</string>
    <string name="checklist_off">Disable checklist</string>
    <string name="checklist_item_hint">New item</string>
    <string name="remove_checklist">Remove checklist?</string>
    <string name="checklist_keep_checked">Keep checked items</string>
    <string name="checklist_keep_symbols">Keep check marks</string>
    <string name="sketch">SketchPad</string>
    <string name="no_items_in_list">Its Empty Why Not Add Some Memories!</string>
    <string name="crash_dialog_text">Something went wrong in TasXpert\nSend automatic report to developer?</string>
    <string name="crash_dialog_comment_prompt">Insert comment here (optional):</string>
    <string name="crash_toast">Something went wrong in TasXpert\nA report has been sent report to the developer!</string>
    <string name="new_update_available">A new version of TasXpert is available, would you like to update?</string>
    <string name="update">Update and rate!</string>
    <string name="not_now">Not now</string>
    <string name="title_activity_sketch">SketchPad</string>
    <string name="redo">Redo</string>
    <string name="colors">Colors</string>
    <string name="stroke">Stroke</string>
    <string name="erase_sketch">Erase sketch?</string>
    <string name="no_reminder_set">No reminder set</string>
    <string name="saturation">Saturation</string>
    <string name="opacity">Opacity</string>
    <string name="dismiss">Discard</string>
    <string name="snooze">Remind me later</string>
    <string name="error_importing_some_attachments">Error importing attachments</string>
    <string name="error_saving_attachments">Error saving attachments</string>
    <string name="proceed">Proceed</string>
    <string name="contracted_view">Reduced view</string>
    <string name="expanded_view">Expanded view</string>
    <string name="add_shortcut">Add shortcut</string>
    <string name="shortcut_added">Shortcut added to home screen</string>
    <string name="shortcut_note_deleted">Shortcut points to deleted Event</string>
    <string name="widget_simple_description">Simple widget with buttons</string>
    <string name="files">Files</string>
    <string name="merge">Merge</string>
    <string name="empty_trash">Empty trash</string>
    <string name="help">Help</string>
    <string name="synchronize">Synchronize</string>
    <string name="select_all">Select all</string>
    <string name="filter_old_reminders">Hide old reminders</string>
    <string name="remove_filter_old_reminders">Show old reminders</string>
    <string name="filter_archived">Hide archived Events</string>
    <string name="remove_filter_archived">Show archived Events</string>
    <string name="settings_about">About The Application</string>
    <string name="settings_screen_notifications">Event Notifications</string>
    <string name="settings_screen_navigation">Navigation Drawer</string>
    <string name="settings_max_video_size">Video attachments</string>
    <string name="settings_max_video_size_summary">Maximum allowed size in MB</string>
    <string name="settings_checked_items_behavior">Checklists</string>
    <string name="settings_checked_items_behavior_summary">What to do when an item is checked?</string>
    <string name="settings_category_preferences">Preferences</string>
    <string name="settings_category_about">About</string>
    <string name="settings_choose_language">Language</string>
    <string name="settings_simple_calendar">Simple calendar and time</string>
    <string name="settings_simple_calendar_summary">Use the (simpler) Android interface for date/time selection, instead of Google interface</string>
    <string name="settings_tour_show_again">App tour</string>
    <string name="settings_tour_show_again_summary">Show me the application tour again</string>
    <string name="colors_app">Application color scheme</string>
    <string name="settings_instant_search">Instant search</string>
    <string name="settings_text_size">Text size</string>
    <string name="settings_screen_behaviors">Event Behaviors</string>
    <string name="settings_enable_swipe">Swipe Events</string>
    <string name="settings_enable_swipe_summary">Swipe on Events to perform actions</string>
    <string name="settings_swipe_to_trash">Swipe to trash</string>
    <string name="settings_fab_expansion_behavior">Floating action button</string>
    <string name="settings_fab_expansion_behavior_summary_on">Short touch performs action</string>
    <string name="settings_fab_expansion_behavior_summary_off">Short touch toggles options</string>
    <string name="settings_attachments_on_bottom">Attachments on bottom</string>
    <string name="settings_attachments_on_bottom_summary_on">Shows attachments below Event content</string>
    <string name="settings_attachments_on_bottom_summary_off">Shows attachments above Event content</string>
    <string name="settings_prettified_dates">Prettified dates</string>
    <string name="settings_prettified_dates_summary_on">Dates are shown in a simplier format</string>
    <string name="settings_prettified_dates_summary_off">Dates are shown in a more detailed format</string>
    <string name="settings_statistics">Statistics</string>
</resources>