<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:fitsSystemWindows="true">

    <ListPreference
            android:entries="@array/languages"
            android:entryValues="@array/languages_codes"
            android:key="settings_language"
            android:title="@string/settings_choose_language"/>

    <ListPreference
            android:entries="@array/text_size"
            android:entryValues="@array/text_size_values"
            android:key="settings_text_size"
            android:title="@string/settings_text_size"
            android:defaultValue="default"/>

    <ListPreference
            android:entries="@array/colors_app"
            android:entryValues="@array/colors_app_values"
            android:key="settings_colors_app"
            android:title="@string/colors_app"
            android:defaultValue="strip"/>

    <SwitchPreference
            android:key="settings_fab_expansion_behavior"
            android:title="@string/settings_fab_expansion_behavior"
            android:summaryOn="@string/settings_fab_expansion_behavior_summary_on"
            android:summaryOff="@string/settings_fab_expansion_behavior_summary_off"
            android:defaultValue="false"/>

    <SwitchPreference
            android:defaultValue="false"
            android:key="settings_simple_calendar"
            android:summary="@string/settings_simple_calendar_summary"
            android:title="@string/settings_simple_calendar"/>

    <SwitchPreference
            android:key="settings_attachments_on_bottom"
            android:summaryOn="@string/settings_attachments_on_bottom_summary_on"
            android:summaryOff="@string/settings_attachments_on_bottom_summary_off"
            android:title="@string/settings_attachments_on_bottom"
            android:defaultValue="false"/>

    <SwitchPreference
            android:key="settings_prettified_dates"
            android:summaryOn="@string/settings_prettified_dates_summary_on"
            android:summaryOff="@string/settings_prettified_dates_summary_off"
            android:title="@string/settings_prettified_dates"
            android:defaultValue="true"/>

</PreferenceScreen>
