<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_vec_search_thicknew"
        android:orderInCategory="100"
        android:title="@string/search"
        android:visible="false"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|always"/>
    <item
        android:id="@+id/menu_filter"
        android:icon="@drawable/vec_filter"
        android:orderInCategory="150"
        android:title="@string/filter_old_reminders"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_filter_remove"
        android:icon="@drawable/vec_filter"
        android:orderInCategory="150"
        android:title="@string/remove_filter_old_reminders"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_filter_category"
        android:icon="@drawable/vec_filter"
        android:orderInCategory="150"
        android:title="@string/filter_archived"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_filter_category_remove"
        android:icon="@drawable/vec_filter"
        android:orderInCategory="150"
        android:title="@string/remove_filter_archived"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_category"
        android:icon="@drawable/ic_vec_new_category"
        android:orderInCategory="175"
        android:title="@string/category"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_select_all"
        android:icon="@drawable/vec_sellect"
        android:orderInCategory="250"
        app:showAsAction="ifRoom"
        android:title="@string/select_all"
        android:visible="false"/>
    <item
        android:id="@+id/menu_add_reminder"
        android:orderInCategory="250"
        android:title="@string/add_reminder"
        android:visible="false"/>
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/vec_share"
        android:orderInCategory="300"
        android:title="@string/share"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_merge"
        android:icon="@drawable/vec_merge"
        android:orderInCategory="400"
        android:title="@string/merge"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_archive"
        android:icon="@drawable/vec_archive"
        android:orderInCategory="1000"
        android:title="@string/archive"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_unarchive"
        android:icon="@drawable/vec_unarchive"
        android:orderInCategory="1000"
        android:title="@string/unarchive"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_trash"
        android:icon="@drawable/vec_bin"
        android:orderInCategory="1100"
        android:title="@string/trash"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_untrash"
        android:icon="@drawable/vec_undo_trash"
        android:orderInCategory="1100"
        android:title="@string/untrash"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/vec_cancel"
        android:orderInCategory="1200"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_vec_sort_thick"
        android:orderInCategory="600"
        android:title="@string/sort"
        android:visible="false"
        app:showAsAction="ifRoom">
        <menu/>
    </item>
    <item
        android:id="@+id/menu_expanded_view"
        android:orderInCategory="800"
        app:showAsAction="never"
        android:title="@string/expanded_view"
        android:visible="false"/>
    <item
        android:id="@+id/menu_contracted_view"
        android:orderInCategory="800"
        app:showAsAction="never"
        android:title="@string/contracted_view"
        android:visible="false"/>
    <item
        android:id="@+id/menu_synchronize"
        android:orderInCategory="850"
        app:showAsAction="never"
        android:title="@string/synchronize"
        android:visible="false"/>
    <item
        android:id="@+id/menu_empty_trash"
        android:orderInCategory="900"
        app:showAsAction="never"
        android:title="@string/empty_trash"
        android:visible="false"/>

</menu>