<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:fitsSystemWindows="true">

    <ListPreference
            android:defaultValue="0"
            android:entries="@array/checked_items_behavior"
            android:entryValues="@array/checked_items_behavior_values"
            android:key="settings_checked_items_behavior"
            android:title="@string/settings_checked_items_behavior"
            android:dialogTitle="@string/settings_checked_items_behavior_summary"/>

    <SwitchPreference
            android:defaultValue="false"
            android:key="settings_instant_search"
            android:title="@string/settings_instant_search"/>

    <SwitchPreference
            android:defaultValue="true"
            android:key="settings_enable_swipe"
            android:title="@string/settings_enable_swipe"
            android:summary="@string/settings_enable_swipe_summary"/>

    <SwitchPreference
            android:defaultValue="false"
            android:key="settings_swipe_to_trash"
            android:title="@string/settings_swipe_to_trash"
            android:dependency="settings_enable_swipe"/>

    <EditTextPreference
            android:inputType="number"
            android:key="settings_max_video_size"
            android:summary="@string/settings_max_video_size_summary"
            android:title="@string/settings_max_video_size"/>

</PreferenceScreen>
