<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_attachment"
        android:icon="@drawable/vec_attachment"
        android:orderInCategory="100"
        android:title="@string/attachment"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_category"
        android:icon="@drawable/ic_vec_new_category"
        android:orderInCategory="200"
        android:title="@string/category"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/vec_share"
        android:orderInCategory="400"
        android:title="@string/share"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_checklist_on"
        android:icon="@drawable/vec_checklist"
        android:orderInCategory="500"
        android:title="@string/checklist_on"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_checklist_off"
        android:icon="@drawable/vec_checklist"
        android:orderInCategory="500"
        android:title="@string/checklist_off"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_lock"
        android:icon="@drawable/vec_lock_open"
        android:orderInCategory="600"
        android:title="@string/lock"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_unlock"
        android:icon="@drawable/vec_lock_closed"
        android:orderInCategory="600"
        android:title="@string/unlock"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_archive"
        android:icon="@drawable/vec_archive"
        android:orderInCategory="800"
        android:title="@string/archive"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_unarchive"
        android:icon="@drawable/vec_unarchive"
        android:orderInCategory="800"
        android:title="@string/unarchive"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_trash"
        android:orderInCategory="900"
        android:title="@string/trash"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_untrash"
        android:icon="@drawable/vec_undo_trash"
        android:orderInCategory="900"
        android:title="@string/untrash"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_discard_changes"
        android:orderInCategory="1000"
        android:title="@string/discard_changes"
        app:showAsAction="ifRoom"/>

</menu>